httpbin5_deploy_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin5
  name: httpbin5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpbin5
  template:
    metadata:
      labels:
        app: httpbin5
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        name: httpbin5
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin5
  name: httpbin5
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin5
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresstest5
spec:
  ingressClassName: "private-iks-k8s-nginx"
  rules:
  - host: app5.ibm-poc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin5
            port:
              number: 80
